package Structural.Proxy.Classes;

public class Employee {
    String name = "John Doe";
    int age = 30;
}
